# ragrep

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  MIGRATION.md  Makefile  README.md  config.toml  modal_ingest.py  pyproject.toml  ragprep-rs-port.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml  rust.yml
docs/: index.html  install.sh
docs/plans/: rust-rewrite.md  support-chatbot-pinecone-replacement.md
plans/: knowledge-index.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/examples/: flat_spike.rs
rust/src/: config.rs  lib.rs  main.rs  models.rs  splash.rs
rust/src/cli/: eval.rs  ingest.rs  inspect.rs  mod.rs  rebuild_bm25.rs  scrape.rs  search.rs  serve.rs  stats.rs
rust/src/embed/: cache.rs  gemini.rs  mod.rs  openai.rs  throttle.rs  voyage.rs
rust/src/eval/: entity.rs  harness.rs  mod.rs
rust/src/index/: bm25.rs  flat.rs  mod.rs  store.rs
rust/src/ingest/: chunk.rs  extract.rs  mod.rs  pipeline.rs  support.rs
rust/src/ingest/normalize/: atlassian.rs  bitbucket.rs  bookmark.rs  code.rs  file.rs  freshdesk.rs  gdrive.rs  git.rs  mod.rs  pin.rs  slack.rs  youtube.rs
rust/src/ingest/scrape/: atlassian.rs  bitbucket.rs  code.rs  gdrive.rs  git.rs  mod.rs  slack.rs
rust/src/query/: filters.rs  mod.rs  retrieve.rs
rust/src/query/rerank/: mod.rs  voyage.rs
rust/src/serve/: auth.rs  knowledge.rs  mod.rs  search.rs
src/ragrep/: __init__.py  cli.py  config.py  index.py  models.py  search.py  server.py
src/ragrep/collection/: __init__.py  catalog.py  record.py  search.py
src/ragrep/eval/: entity_graph.py  harness.py
src/ragrep/ingest/: chunk.py  embed.py  extract.py  normalize.py  pipeline.py  scrape_atlassian.py  scrape_bitbucket.py  scrape_code.py  scrape_gdrive.py  scrape_git.py  scrape_slack.py  store.py
src/ragrep/query/: filter.py  generate.py  pipeline.py  prompt.py  rerank.py  retrieve.py
tests/: test_cli_entrypoint.py  test_collection_catalog.py  test_collection_index.py  test_filter_contract.py  test_search_contract.py  test_store_persistence.py
tools/: extract_embeddings.py  migrate.py  parity.py  spike_parity.py
